--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1 class="header">Introduction to CS-50</h1>
+        <p>Notes from the CS-50 course</p>
+        <ul class="lectures">
+            <li href="#scratch">Week 0: Scratch</li>
+        </ul>
+
+        <div id="scratch">
+            <p>Understanding binary</p>
+            <p>understanding ascii -> 256 possibilities ascii can represent. Ascii doesnt cover all characters. For example. the asian characters has way more than what ascii can represent</p>
+            <p>Unicode represents more characters</p>
+
+        </div>
+    </div>
+
+
 
     <script src="app.js"></script>
 </body>
